--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 <style>
 :root{
-  --accent1:#ff4da6;
-  --accent2:#ff85c1;
-  --bg1:#ffd6e9;
-  --bg2:#fff0f6;
-  --text:#333;
+  --accent1:#a259ff;  /* morado vivo */
+  --accent2:#d29cff;  /* lila */
+  --bg1:#f5e0ff;      /* fondo lila claro */
+  --bg2:#f0d6ff;      /* fondo lila suave */
+  --text:#2b2b2b;     /* texto oscuro */
 }
 
 /* Reset y base */
@@ -41,18 +41,18 @@ h1{
   font-size:clamp(1.8rem,4vw,3rem);
   color: var(--accent1);
   margin-bottom:14px;
-  text-shadow: 0 0 10px #fff, 0 0 20px #ffb3d9, 0 0 30px #ff85c1;
+  text-shadow: 0 0 10px #fff, 0 0 20px #d29cff, 0 0 30px #a259ff;
   animation: glowText 3s infinite alternate;
 }
 @keyframes glowText{
-  0%{ text-shadow:0 0 8px #fff,0 0 16px #ffb3d9,0 0 28px #ff85c1;}
-  100%{ text-shadow:0 0 16px #fff,0 0 28px #ffb3d9,0 0 40px #ff4da6;}
+  0%{ text-shadow:0 0 8px #fff,0 0 16px #d29cff,0 0 28px #a259ff;}
+  100%{ text-shadow:0 0 16px #fff,0 0 28px #d29cff,0 0 40px #a259ff;}
 }
 .subtitle{
   font-family:'Brush Script MT', cursive;
   font-size:clamp(1.2rem,3vw,2rem);
-  color:#ff4da6;
-  text-shadow:0 0 8px #fff,0 0 16px #ffb3d9;
+  color:#d29cff;
+  text-shadow:0 0 8px #fff,0 0 16px #d29cff;
   margin-bottom:30px;
   animation: floatSubtitle 4s infinite alternate;
 }
@@ -71,10 +71,10 @@ h1{
   border-radius:20px;
   font-size:1.3rem;
   cursor:pointer;
-  box-shadow:0 10px 40px rgba(255,77,166,0.4);
+  box-shadow:0 10px 40px rgba(162,89,255,0.4);
   transition: transform .15s ease, box-shadow .15s ease;
 }
-.btn:hover{ transform: scale(1.1); box-shadow:0 14px 45px rgba(255,77,166,0.6);}
+.btn:hover{ transform: scale(1.1); box-shadow:0 14px 45px rgba(162,89,255,0.6);}
 .btn:active{ transform: scale(0.97); }
 
 /* Cumplido */
@@ -118,9 +118,9 @@ h1{
   position:absolute;
   width:20px;height:20px;
   border-radius:50%;
-  background:#ff4da6;
+  background:#a259ff;
 }
-.heart::after{ left:10px; background:#ff85c1;}
+.heart::after{ left:10px; background:#d29cff;}
 @keyframes floatHeart{
   0%{ transform: translateY(0px) rotate(-45deg); opacity:1;}
   100%{ transform: translateY(-150px) rotate(-45deg); opacity:0;}
@@ -131,21 +131,21 @@ h1{
   position:absolute;
   width:10px;height:10px;
   border-radius:50%;
-  background: #ffb3d9;
+  background: #d29cff;
   opacity:0.8;
 }
 @keyframes floatParticle{
-  0%{ transform: translateY(0px); opacity:1;}
-  100%{ transform: translateY(-80px); opacity:0;}
+  0%{ transform: translateY(0px) opacity:1;}
+  100%{ transform: translateY(-80px) opacity:0;}
 }
 
 /* Fondo animado */
 @keyframes bgShift{
-  0%{ background: linear-gradient(135deg, #ffd6e9, #fff0f6);}
-  25%{ background: linear-gradient(135deg, #ffe0f0, #fff7f8);}
-  50%{ background: linear-gradient(135deg, #ffd0e5, #fff0f5);}
-  75%{ background: linear-gradient(135deg, #ffe6f2, #fff8fa);}
-  100%{ background: linear-gradient(135deg, #ffd6e9, #fff0f6);}
+  0%{ background: linear-gradient(135deg, #f5e0ff, #f0d6ff);}
+  25%{ background: linear-gradient(135deg, #e9caff, #f5e0ff);}
+  50%{ background: linear-gradient(135deg, #f0d0ff, #e9c2ff);}
+  75%{ background: linear-gradient(135deg, #f5e6ff, #f0d6ff);}
+  100%{ background: linear-gradient(135deg, #f5e0ff, #f0d6ff);}
 }
 
 /* Estrellas de fondo */
@@ -168,7 +168,7 @@ h1{
 <body>
 
 <div class="card">
-  <h1>💖 Cumplidos Épicos para Nicool 💖</h1>
+  <h1>💜 Cumplidos Épicos para Nicool 💜</h1>
   <div class="subtitle">para la niña que ilumina corazones ✨</div>
   <button class="btn" id="btn">Dame un cumplido 🌸</button>
   <div id="cumplido"></div>
