--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ h1{
 <body>
 
 <div class="card">
-  <h1>💜 Cumplidos Épicos para Nicool 💜</h1>
-  <div class="subtitle">para la niña que ilumina corazones ✨</div>
+  <h1>💜 frasecitas para Nicool 💜</h1>
+  <div class="subtitle">la niña con los ojitos más hermosos ✨</div>
   <button class="btn" id="btn">Dame un cumplido 🌸</button>
   <div id="cumplido"></div>
 </div>
